Added Hyper parameter tuning

--- a/Project 1/Project_1_a.ipynb
+++ b/Project 1/Project_1_a.ipynb
@@ -5274,6 +5274,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0d236519-ff55-4b9e-bfec-0cbcbeded327",
+   "metadata": {},
+   "source": [
+    "### **Hyperparameter Tuning**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 259,
    "id": "77b64ad0-f732-4629-9717-e3f221ddbb85",
